fixed issue with background not scaling on mobile

--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ e
 *
 */
 
+html {
+	height: 100%;
+}
 
 
 body {
